--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: i.Seq.aSum
-Title: What the Package Does (one line, title case)
+Title: This package is for a paper in preparation that compares new scoring methods to competing methods for GE interaction detection for independent subjects
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person(“Brandon”, “Coombes”, email = “coom0054@umn.edu”, role = c("aut", "cre"))
+Description: Functions for analyzing GE interaction and simulating data
 Depends: R (>= 3.2.2)
-License: What license is it under?
+License: n/a
 LazyData: true
+
